Created separate router build directory

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "svelte-kitlike-router",
-	"version": "0.0.2",
+	"name": "@sveltejs/kit",
+	"version": "1.0.0-next.154",
+	"type": "module",
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.16",
 		"cheap-watch": "^1.0.3",
@@ -35,7 +36,7 @@
 		"svelte": "^3.40.0",
 		"svelte-check": "^2.2.4",
 		"svelte2tsx": "~0.4.1",
-		"tiny-glob": "^0.2.9",
+		"tiny-glob": "^0.2.8",
 		"uvu": "^0.5.1"
 	},
 	"peerDependencies": {
@@ -46,7 +47,9 @@
 	},
 	"files": [
 		"assets",
-		"types"
+		"dist",
+		"types",
+		"svelte-kit.js"
 	],
 	"scripts": {
 		"build": "rollup -c",
@@ -63,15 +66,17 @@
 	},
 	"exports": {
 		"./package.json": "./package.json",
-		".": "./assets/index.js",
-		"./$app/navigation": "./assets/runtime/app/navigation.js",
-		"./$app/stores": "./assets/runtime/app/stores.js",
-		"./$app/paths": "./assets/runtime/app/paths.js",
-		"./$app/env": "./assets/runtime/app/env.js",
-		"./components/layout.svelte": "./assets/components/layout.svelte",
-		"./components/error.svelte": "./assets/components/error.svelte",
-		"./createmanifest": {
-			"require": "./assets/runtime/createmanifest.cjs"
+		"./ssr": {
+			"import": "./dist/ssr.js"
+		},
+		"./node": {
+			"import": "./dist/node.js"
+		},
+		"./hooks": {
+			"import": "./dist/hooks.js"
+		},
+		"./install-fetch": {
+			"import": "./dist/install-fetch.js"
 		},
 		"./types": "./types/index.d.ts"
 	},
