--- a/packages/kit/.gitignore
+++ b/packages/kit/.gitignore
@@ -5,4 +5,6 @@
 /client/**/*.d.ts
 /test/**/.svelte-kit
 /test/**/build
+/router/runtime
+/router/createmanifest
 !/src/api/adapt/test/fixtures/*/.svelte-kit
